Fixed artist card image alignment

--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -67,7 +67,8 @@ span {
   font-size: 20px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 10px;
-  text-shadow: 2px 3px #0c0c0c61;
+  text-shadow: 1px 2px #0c0c0c61;
+  box-shadow: 0 4px 6px 3px #222;
 }
 
 .artist-albums-page .artist-title {
@@ -104,25 +105,28 @@ span {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  margin: auto;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 17px;
 }
 
 .artist-card {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* background-color: grey; */
+  align-content: space-around;
+  justify-content: space-around;
+  
   background-image: linear-gradient(#282c34, rgb(118, 118, 141));
-  padding: 30px 30px 0px 30px;
   margin: 10px;
-  margin-bottom: 20px;
   max-width: 40vh;
   height: 40vh;
   box-shadow: 8px 7px #8888887c;
   border-radius: 5px;
   text-shadow: 1px 1px #0c0c0c61;
+}
+
+.artist-image {
+  padding-top: 4vh;
 }
 
 .artist-members {
